<resources>
    <string name="app_name">ContagemGlicemia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="corrigir">Corrigir</string>
    <string name="alimentar">Alimentar</string>
    <string name="malhar">Treinar</string>
    <string name="permission_location_info">Clique aqui para saber mais</string>
    <string name="salvar">Salvar</string>
    <string name="configuracoes">Configurações</string>
    <string name="food">Alimentação</string>
    <string name="ex_150">Ex.: 150</string>
    <string name="insira_a_glicemia_atual">Insira a glicemia atual</string>
    <string name="resultado">Resultado:</string>
    <string name="glicemy_chart">Gráfico das glicemias</string>

</resources>