<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.Home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/insira_a_glicemia_atual"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/ex_150"
            android:textSize= "20sp"
            android:inputType="number"
            android:digits="0123456789"
            android:maxLines="1"
            android:maxLength="3"
            android:textColor="@color/secondaryTextPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_id"
            android:autofillHints="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/editText"
            android:layout_alignParentEnd="true"
            android:text="mg/dl"
            android:textColor="@color/secondaryTextPrimary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/editText"
            app:layout_constraintEnd_toEndOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/text_view_id"
            app:layout_constraintVertical_bias="0.59000003" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/selectionFunctions"
                android:background="@drawable/shape_item"
                android:layout_margin="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/checkboxes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <CheckBox
                        android:id="@+id/checkbox_corrigir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/corrigir"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <CheckBox
                        android:id="@+id/checkbox_alimentar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/alimentar"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/checkbox_corrigir"
                        app:layout_constraintTop_toTopOf="parent" />

                    <CheckBox
                        android:id="@+id/checkbox_malhar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/malhar"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/checkbox_alimentar"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayout_refeicao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkboxes">

                <TextView
                    android:id="@+id/text_view_refeicao_atual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Refeição atual: "
                    android:textSize="20sp"
                    android:textStyle="bold"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/text_view_tipo_refeicao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tipo refeição"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button_calcular"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:text="Calcular"
            android:backgroundTint="@color/blue_500"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/shape_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectionFunctions" />

        <TextView
            android:id="@+id/text_view_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:visibility="gone"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_calcular" />

        <TextView
            android:id="@+id/text_view_resultado_insulina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_result"
            app:suffixText="U.I."
            tools:text="Aplicar x U.I" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>